--- a/packages/nuka/package.json
+++ b/packages/nuka/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuka-carousel",
+  "name": "@banyo-dk/nuka-carousel",
   "version": "6.0.3",
   "description": "Pure React Carousel",
   "main": "dist/index.js",
@@ -74,7 +74,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/FormidableLabs/nuka-carousel"
+    "url": "https://github.com/Banyo-dk/nuka-carousel"
   },
   "keywords": [
     "react",
@@ -84,9 +84,9 @@
   "author": "@FormidableLabs",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/FormidableLabs/nuka-carousel/issues"
+    "url": "https://github.com/Banyo-dk/nuka-carousel/issues"
   },
-  "homepage": "https://github.com/FormidableLabs/nuka-carousel",
+  "homepage": "https://github.com/Banyo-dk/nuka-carousel",
   "sideEffects": false,
   "publishConfig": {
     "provenance": true
