--- a/packages/nuka/package.json
+++ b/packages/nuka/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@banyo-dk/nuka-carousel",
+  "name": "@banyo/nuka-carousel",
   "version": "6.0.3",
   "description": "Pure React Carousel",
   "main": "dist/index.js",
@@ -74,7 +74,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Banyo-dk/nuka-carousel"
+    "url": "git+https://github.com/Banyo-dk/nuka-carousel.git"
   },
   "keywords": [
     "react",
